# emotion-vectors

./: .gitignore  01_generate_stories.py  02_extract_activations.py  03_compute_vectors.py  04_validate_probes.py  05_steer_and_eval.py  06_chat_interface.py  CLAUDE.md  README.md  bootstrap.sh  config.py  emotions.json  pyproject.toml  setup.sh  test_workspace_write.py  topics.md
data/activations/12/: angry.pt  angry_norms.pt  anxious.pt  anxious_norms.pt  excited.pt  excited_norms.pt  frustrated.pt  frustrated_norms.pt  happy.pt  happy_norms.pt  mean_residual_norm.pt  neutral.pt  neutral_norms.pt
data/activations/16/: angry.pt  angry_norms.pt  anxious.pt  anxious_norms.pt  excited.pt  excited_norms.pt  frustrated.pt  frustrated_norms.pt  happy.pt  happy_norms.pt  mean_residual_norm.pt  neutral.pt  neutral_norms.pt
data/activations/17/: afraid_norms.pt  angry_norms.pt  anxious_norms.pt  disgusted_norms.pt  excited_norms.pt  frustrated_norms.pt  happy_norms.pt  hostile_norms.pt  mean_residual_norm.pt  neutral_norms.pt  sad_norms.pt  tender_norms.pt
data/activations/24/: angry.pt  angry_norms.pt  anxious.pt  anxious_norms.pt  excited.pt  excited_norms.pt  frustrated.pt  frustrated_norms.pt  happy.pt  happy_norms.pt  mean_residual_norm.pt  neutral.pt  neutral_norms.pt
data/stories/: afraid.jsonl  angry.jsonl  anxious.jsonl  disgusted.jsonl  excited.jsonl  frustrated.jsonl  happy.jsonl  hostile.jsonl  neutral.jsonl  sad.jsonl  tender.jsonl
outputs/: judge_ratings.json  probe_results.json  steered_responses.jsonl
utils/: hooks.py  prompts.py  visualization.py
(+75 files in other folders)
